Fix updating products
